--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "axios": "^0.17.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "react-slick": "^0.18.1"
   },
   "scripts": {
     "start": "react-scripts start",
