--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "lodash": "^4.17.5",
     "mongoose": "^4.11.7",
+    "prop-types": "^15.6.0",
+    "react-jss": "^8.3.3",
+    "react-modal": "^3.2.1",
     "react-responsive-carousel": "^3.1.33",
     "react-slick": "^0.18.1"
   }
