--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.11.7",
     "prop-types": "^15.6.0",
     "react-jss": "^8.3.3",
+    "react-materialize": "^1.1.2",
     "react-modal": "^3.2.1",
     "react-responsive-carousel": "^3.1.33",
     "react-slick": "^0.18.1"
